# DevOps-ChatBot-Engine

./: README.md  main.py  pyproject.toml
devopschatenginee/constraints/: constants.py
devopschatenginee/managers/: chatops_manager.py  kubernetes_manager.py
devopschatenginee/operations/: kubernetes_action.py
devopschatenginee/states/: chat_states.py
devopschatenginee/utils/: list_chunker.py  logger_setup.py
settings/kube_config/: dev-test
